# mlutil

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  publish.yaml
mlutil/eval/: _cv.py
mlutil/model/: _pygam.py
mlutil/transform/: __init__.py  _encoder.py  _selector.py
tests/: test_eval.py  test_transform.py
