[tool.poetry]
name = "mlutil"
version = "0.1.0"
description = "A few useful tools for Machine Learning"
authors = ["Mysterious Ben <datascience@tuta.io>"]
license = "Apache License, Version 2.0"

[tool.poetry.dependencies]
python = "~3.8"
scipy = "^1.7.2"
pandas = "^1.3.4"
numpy = "^1.21.4"
statsmodels = "^0.13.0"
loguru = "^0.5.3"
matplotlib = "^3.4.3"
scikit-learn = "^1.0.1"
scikit-optimize = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
flake8 = "^4.0.1"
black = "^21.10b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
